# sidecar-pattern

./: .gitignore  README.md  docker-compose.yaml  sidecar-docker-compose.yaml
deploy/: docker-compose.yaml
go-app/: docker-compose.yaml  go.mod  go.sum  main.go
nginx/: Imagefile  app.conf
node-app/: Imagefile  docker-compose.yaml  package-lock.json  package.json
node-app/src/: app.js  server.js
node-app/src/middlewares/: convertResponseToXML.js
node-app/src/utils/: generateFakeData.js
node-negotiator-sidecar/: .dockerignore  Imagefile  package-lock.json  package.json
node-negotiator-sidecar/src/: server.js
node-negotiator-sidecar/src/utils/: graceful.js  handleProxiedRequest.js  handleProxiedResponse.js  logger.js
python-app/: Imagefile  pyproject.toml
python-app/src/app/: main.py
